# vms-core

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
include/vms/core/: thread_base.h  thread_worker.h
src/: thread_base.cpp  thread_worker.cpp
tests/: CMakeLists.txt  thread_tests.cpp
